# template-instructions

./: Makefile  README.md  extract_fillers.py  extract_noun_phrases.py  extract_templates.py  fillin_blanks.py  pyproject.toml
